# LDTRaces

./: .gitignore  README.md  manage.py  pyproject.toml  startlists.json
raceData/: asgi.py  settings.py  urls.py  wsgi.py
races/: api.py  models.py  serializers.py  urls.py  views.py
races/management/commands/: clear_startlist.py  load_startlist.py
races/migrations/: 0001_initial.py  0002_alter_ticket_unique_together_ticket_dataset_id.py  0003_ticket_created_at_ticket_updated_at.py
races/tests/: test_integration_create_ticket.py
